Patch by Dawit Alemayehu <adawit@kde.org> on 2011-08-05 Reviewed by Andreas Kling.

Reverted commit r87797, http://trac.webkit.org/changeset/87797, because it
causes the regression reported under bug# 63582.

[Qt] REGRESSION(r87797): Broke KDEWebKit's custom QNAM.
https://bugs.webkit.org/show_bug.cgi?id=63582

* WebCoreSupport/FrameLoaderClientQt.cpp:
(WebCore::FrameLoaderClientQt::setFrame):

Canonical link: https://commits.webkit.org/81598@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92479 268f45cc-cd09-0410-ab3c-d52691b4dbfc